--- a/main.ipynb
+++ b/main.ipynb
@@ -352,7 +352,28 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#part Naive Bayes\n",
+    "nb = MultinomialNB()\n",
+    "nb.fit(tfidf_train, y_train)\n",
+    "print(\"Accuracy:\",nb.score(tfidf_test, y_test))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nb.fit(tfidf_train,y_train)\n",
+    "pred_results = nb.predict(tfidf_test)\n",
+    "print(f\"Confusion Matrix \\n {confusion_matrix(y_test,pred_results)}\")\n",
+    "print(classification_report(y_test,pred_results))\n",
+    "print(f\"Accuracy {nb.score(tfidf_test,y_test)}\")\n",
+    "print(f\"Precision {metrics.precision_score(y_test,pred_results)}\")\n",
+    "print(f\"recall {metrics.recall_score(y_test,pred_results)}\")\n",
+    "print(f\"f1score {metrics.f1_score(y_test,pred_results)}\")"
+   ]
   }
  ],
  "metadata": {
