--- a/main.ipynb
+++ b/main.ipynb
@@ -374,6 +374,30 @@
     "print(f\"recall {metrics.recall_score(y_test,pred_results)}\")\n",
     "print(f\"f1score {metrics.f1_score(y_test,pred_results)}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "knn=KNeighborsClassifier()\n",
+    "k_range = list(range(1,20,2))\n",
+    "param_grid = dict(n_neighbors=k_range)\n",
+    "grid = GridSearchCV(knn, param_grid, cv=10, scoring='accuracy', return_train_score=False,verbose=2)\n",
+    "grid_search=grid.fit(tfidf_train, y_train)\n",
+    "print(grid_search.best_params_)\n",
+    "accuracy = grid_search.best_score_ *100\n",
+    "print(\"Accuracy for our training dataset with tuning is : {:.2f}%\".format(accuracy) )\n",
+    "model=KNeighborsClassifier(n_neighbors=grid_search.best_params_)\n",
+    "predictedResult = grid_search.predict(tfidf_test)\n",
+    "print(\"Accuracy: \",grid_search.score(tfidf_test,y_test))\n",
+    "print(\"Precision: \",metrics.precision_score(y_test,predictedResult))\n",
+    "print(\"Recall: \", metrics.recall_score(y_test, predictedResult))\n",
+    "print(\"F1 score: \", metrics.f1_score(y_test,predictedResult))\n",
+    "print(\"Classification Report: \\n\",classification_report(y_test, predictedResult))\n",
+    "print(\"Confusion Matrix: \\n\", confusion_matrix(y_test,predictedResult))"
+   ]
   }
  ],
  "metadata": {
