--- a/main.ipynb
+++ b/main.ipynb
@@ -398,6 +398,94 @@
     "print(\"Classification Report: \\n\",classification_report(y_test, predictedResult))\n",
     "print(\"Confusion Matrix: \\n\", confusion_matrix(y_test,predictedResult))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gamma_range = np.logspace(-9,3,13)\n",
+    "# kernel_range = np.array(['rbf'])\n",
+    "\n",
+    "\n",
+    "param_grid = dict(gamma = gamma_range)\n",
+    "# cv = StratifiedShuffleSplit(n_splits = 5, test_size = 0.2, random_state = 42)\n",
+    "\n",
+    "\n",
+    "svm_cv = GridSearchCV(svm.SVC(kernel=\"rbf\"),param_grid = param_grid,cv=5,verbose=3)\n",
+    "svm_cv.fit(tfidf_train, y_train)\n",
+    "pred_results=svm_cv.predict(tfidf_test)\n",
+    "\n",
+    "print(f\"Confusion Matrix \\n {confusion_matrix(y_test,pred_results)}\")\n",
+    "print(svm_cv.best_estimator_)\n",
+    "print(\"The best paramter are %s with a score of %0.2f\" % (svm_cv.best_params_, svm_cv.best_score_))\n",
+    "\n",
+    "print(classification_report(y_test, pred_results))\n",
+    "print(\"test set\")\n",
+    "print(\"\\nAccuracy Score: \" + str(metrics.accuracy_score(y_test, pred_results)))\n",
+    "print(f\"Precision {metrics.precision_score(y_test,pred_results)}\")\n",
+    "print(f\"Recall {metrics.recall_score(y_test,pred_results)}\")\n",
+    "print(f\"f1-score {metrics.f1_score(y_test,pred_results)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "degree_range = np.array([2,3,4,5])\n",
+    "kernelrange=np.array(['poly'])\n",
+    "param_grid = dict(degree=degree_range, kernel=kernelrange)\n",
+    "grid = GridSearchCV(svm.SVC(), param_grid=param_grid, cv=5, verbose = 3)\n",
+    "grid.fit(tfidf_train, y_train)\n",
+    "pred_results=grid.predict(tfidf_test)\n",
+    "\n",
+    "print(f\"Confusion Matrix \\n {confusion_matrix(y_test,pred_results)}\")\n",
+    "print(grid.best_estimator_)\n",
+    "print(\"The best paramter are %s with a score of %0.2f\" % (grid.best_params_, grid.best_score_))\n",
+    "\n",
+    "print(classification_report(y_test, pred_results))\n",
+    "print(\"test set\")\n",
+    "print(\"\\nAccuracy Score: \" + str(metrics.accuracy_score(y_test, pred_results)))\n",
+    "print(f\"Precision {metrics.precision_score(y_test,pred_results)}\")\n",
+    "print(f\"Recall {metrics.recall_score(y_test,pred_results)}\")\n",
+    "print(f\"f1-score {metrics.f1_score(y_test,pred_results)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c_range = np.logspace(-2,10,13)\n",
+    "# gamma_range = np.logspace(-9,3,13)\n",
+    "# degree_range =  np.logspace(-2,10,13)\n",
+    "# kernel_range = 'linear'\n",
+    "\n",
+    "\n",
+    "param_grid = dict(kernel = ['linear'], C = c_range)\n",
+    "# cv = StratifiedShuffleSplit(n_splits = 5, test_size = 0.2, random_state = 42)\n",
+    "\n",
+    "\n",
+    "svm_cv = GridSearchCV(svm.SVC(),param_grid = param_grid,cv=5,verbose=3)\n",
+    "svm_cv.fit(tfidf_train, y_train)\n",
+    "\n",
+    "pred_results=svm_cv.predict(tfidf_test)\n",
+    "\n",
+    "print(f\"Confusion Matrix \\n {confusion_matrix(y_test,pred_results)}\")\n",
+    "print(svm_cv.best_estimator_)\n",
+    "print(\"The best paramter are %s with a score of %0.2f\" % (svm_cv.best_params_, svm_cv.best_score_))\n",
+    "\n",
+    "print(classification_report(y_test, pred_results))\n",
+    "print(\"test set\")\n",
+    "print(\"\\nAccuracy Score: \" + str(metrics.accuracy_score(y_test, pred_results)))\n",
+    "print(f\"Precision {metrics.precision_score(y_test,pred_results)}\")\n",
+    "print(f\"Recall {metrics.recall_score(y_test,pred_results)}\")\n",
+    "print(f\"f1-score {metrics.f1_score(y_test,pred_results)}\")"
+   ]
   }
  ],
  "metadata": {
