--- a/main.ipynb
+++ b/main.ipynb
@@ -486,14 +486,51 @@
     "print(f\"Recall {metrics.recall_score(y_test,pred_results)}\")\n",
     "print(f\"f1-score {metrics.f1_score(y_test,pred_results)}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import MLPClassifer \n",
+    "from sklearn.neural_network import MLPClassifier\n",
+    "\n",
+    "# Create model object\n",
+    "clf = MLPClassifier(hidden_layer_sizes=(100,100,100),\n",
+    "                    random_state=5,\n",
+    "                    verbose=True,\n",
+    "                    learning_rate_init=0.01,\n",
+    "                    activation='relu',\n",
+    "                    solver='sgd')\n",
+    "\n",
+    "# Fit data onto the model\n",
+    "clf.fit(tfidf_train,y_train)\n",
+    "y_predict_test = clf.predict(tfidf_test)\n",
+    "\n",
+    "#Evaluating Model\n",
+    "print(classification_report(y_test, y_predict_test))\n",
+    "print(\"test set\")\n",
+    "print(\"\\nAccuracy Score: \" + str(metrics.accuracy_score(y_test, y_predict_test)))\n",
+    "print(\"F1 Score: \" + str(metrics.f1_score(y_test,y_predict_test)))\n",
+    "print(\"Recall: \" + str(metrics.recall_score(y_test,y_predict_test)))\n",
+    "print(\"Precision: \" + str(metrics.precision_score(y_test, y_predict_test)))\n",
+    "print(f\"Confusion Matrix \\n {confusion_matrix(y_test, y_predict_test)}\")\n",
+    "\n",
+    "# Make prediction on test dataset\n",
+    "ypred=clf.predict(tfidf_test)\n",
+    "\n",
+    "# Calcuate accuracy\n",
+    "accuracy_score(y_test,ypred)"
+   ]
   }
  ],
  "metadata": {
   "interpreter": {
-   "hash": "70f5df420721fc3aa19f20d0a5504125503fd3fc5da58dc6d03769338461bb36"
+   "hash": "9cdd1d1c5c47eea14e456a882bb6d4abf4ef3db69fa4b3f3699fb1a34d98b477"
   },
   "kernelspec": {
-   "display_name": "Python 3.9.13 64-bit (windows store)",
+   "display_name": "Python 3.8.5 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -507,7 +544,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.8.5"
   },
   "orig_nbformat": 4
  },
