--- a/main.ipynb
+++ b/main.ipynb
@@ -413,7 +413,7 @@
     "# cv = StratifiedShuffleSplit(n_splits = 5, test_size = 0.2, random_state = 42)\n",
     "\n",
     "\n",
-    "svm_cv = GridSearchCV(svm.SVC(kernel=\"rbf\"),param_grid = param_grid,cv=5,verbose=3)\n",
+    "svm_cv = GridSearchCV(svm.SVC(kernel=\"rbf\"),param_grid = param_grid,verbose=3)\n",
     "svm_cv.fit(tfidf_train, y_train)\n",
     "pred_results=svm_cv.predict(tfidf_test)\n",
     "\n",
@@ -435,10 +435,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "degree_range = np.array([2,3,4,5])\n",
-    "kernelrange=np.array(['poly'])\n",
-    "param_grid = dict(degree=degree_range, kernel=kernelrange)\n",
-    "grid = GridSearchCV(svm.SVC(), param_grid=param_grid, cv=5, verbose = 3)\n",
+    "#kernelrange=np.array(['poly'])\n",
+    "param_grid = dict(degree=degree_range)\n",
+    "grid = GridSearchCV(svm.SVC(kernel=\"poly\"), param_grid=param_grid, verbose = 3)\n",
     "grid.fit(tfidf_train, y_train)\n",
     "pred_results=grid.predict(tfidf_test)\n",
     "\n",
@@ -451,7 +452,9 @@
     "print(\"\\nAccuracy Score: \" + str(metrics.accuracy_score(y_test, pred_results)))\n",
     "print(f\"Precision {metrics.precision_score(y_test,pred_results)}\")\n",
     "print(f\"Recall {metrics.recall_score(y_test,pred_results)}\")\n",
-    "print(f\"f1-score {metrics.f1_score(y_test,pred_results)}\")"
+    "print(f\"f1-score {metrics.f1_score(y_test,pred_results)}\")\n",
+    "\n",
+    "# pickle.dump(grid, open('Saver_POLY_SVM', 'wb'))"
    ]
   },
   {
@@ -466,11 +469,11 @@
     "# kernel_range = 'linear'\n",
     "\n",
     "\n",
-    "param_grid = dict(kernel = ['linear'], C = c_range)\n",
+    "param_grid = dict( C = c_range)\n",
     "# cv = StratifiedShuffleSplit(n_splits = 5, test_size = 0.2, random_state = 42)\n",
     "\n",
     "\n",
-    "svm_cv = GridSearchCV(svm.SVC(),param_grid = param_grid,cv=5,verbose=3)\n",
+    "svm_cv = GridSearchCV(svm.SVC(kernel =\"linear\"),param_grid = param_grid,verbose=3)\n",
     "svm_cv.fit(tfidf_train, y_train)\n",
     "\n",
     "pred_results=svm_cv.predict(tfidf_test)\n",
